# llvm-constant-folding-pass

./: .gitignore  CMakeLists.txt  README.md  llvm_dashboard.py  run_compare.sh
input/: test.c  test.ll  test.out  test.s
passes/: CMakeLists.txt  MyFirstPass.cpp
